# poranges

./: .gitignore  Cargo.toml  README.md  arrops.py  pyproject.toml  so.py  test.csv  test.json  test.py  test_pyoframe.py
docs/: differences.md
poranges/: __init__.py  closest_intervals.py  constants.py  four_quadrants_data.py  groupby_join_result.py  ops.py  overlapping_intervals.py  register_genomics_namespace.py  register_interval_namespace.py
poranges/genomics/: genomics_ops.py
pyoframe/: __init__.py  join.py  ops.py
src/: join.rs  lib.rs  overlap_idxes.rs  overlaps.rs  split_apply_combine.rs
tests/join/: test_closest.py  test_join.py
tests/overlap_idxes/: test_pyoframe.py
tests/property/: generate_intervals.py  helpers.py  hypothesis_settings.py  test_closest.py  test_join.py  test_merge.py
tests/property/genomics/: test_overlaps.py
tests/unit/: test_closest.py  test_join.py  test_merge.py
tests/unit/genomics/: test_genomics.py
